# ClipLite

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report_en.md  bug_report_ru.md  config.yml  feature_request_en.md  feature_request_ru.md
Base.lproj/: Main.storyboard
src/: AppDelegate.h  AppDelegate.mm  ClipboardHistory.cpp  ClipboardHistory.hpp  StatusController.h  StatusController.mm  main.mm
